--- a/asserts/CSS/yespaceCss.css
+++ b/asserts/CSS/yespaceCss.css
@@ -3,6 +3,7 @@
 	--fColor: #4C51B1;
 	--sColor: #6D6D6D;
 }
+
 /* 使用方法var(--fColor); */
 .footer-zhe {
 	position: sticky;
@@ -13,11 +14,13 @@
 	background-color: white;
 	z-index: 9999;
 }
-.container-zhe{
+
+.container-zhe {
 	width: 100%;
 	height: 100%;
 	overflow: auto;
 }
+
 .background-footer {
 	background-color: white;
 
@@ -29,16 +32,18 @@
 	left: 0px;
 	bottom: 0px;
 	width: 100%;
-	height:8vw;
+	height: 8vw;
 	background-color: white;
 	display: flex;
 	justify-content: center;
 	/* filter不规则图形模糊样式 */
 	filter: drop-shadow(0px -1px 11px #33333333)
 }
-.container-bar-index{
+
+.container-bar-index {
 	margin-bottom: 12vw;
 }
+
 .footer-bot:before {
 	bottom: 0;
 	width: 12vw;
@@ -56,13 +61,16 @@
 	-webkit-box-shadow: 0px 3px 11px -6px #333333, 0px -3px 11px -6px #333333;
 	box-shadow: 0px 3px 11px -6px #333333, 0px -3px 11px -6px #333333;
 }
-.shadow-irreguler{
+
+.shadow-irreguler {
 	filter: drop-shadow(0px -1px 11px #33333333)
 }
+
 /* 顶部常驻栏样式 */
-.top-header{
+.top-header {
 	background-color: var(--fColor);
 }
+
 /* 顶栏固定 */
 .sticky-top {
 	position: sticky;
@@ -103,10 +111,11 @@
 	border-radius: 3vw;
 }
 
-.float-instruction{
+.float-instruction {
 	border-radius: 3vw;
 	overflow: hidden;
 }
+
 /* Iconfont矢量图标CSS样式 */
 .icon {
 	width: 1em;
@@ -129,7 +138,13 @@
 	padding: 0;
 }
 
-/* 消息总界面 */
+/* 消息总界面 Message-index*/
+.container-index-liu {
+	width: 100%;
+	height: 100%;
+	margin-bottom: 16vw;
+}
+
 span {
 	/* line-height: 125px; */
 	font-weight: bold;
@@ -142,7 +157,6 @@ span {
 	width: 100%;
 	border: 1px solid 0;
 	height: 125px;
-	padding-left: 30px;
 }
 
 .list-item {
@@ -151,7 +165,6 @@ span {
 	width: 100%;
 	line-height: 100px;
 	border: 2px solid var(--fColor);
-	padding-left: 30px;
 }
 
 .list-item:hover {
@@ -159,10 +172,7 @@ span {
 	color: white;
 }
 
-.container-liu {
-	width: 100%;
-	height: 100%;
-}
+
 
 /* 通知界面Message-inform */
 .container-inform-liu {
@@ -196,12 +206,14 @@ span {
 .head-photo {
 	position: absolute;
 }
-.bell-liu{
+
+.bell-liu {
 	font-size: 104px;
 	color: var(--fColor);
 	margin: 8px;
 }
-.word-left-liu{
+
+.word-left-liu {
 	float: left;
 	width: 75%;
 	margin: 30px 40px 30px 160px;
@@ -211,7 +223,8 @@ span {
 	color: #fff;
 	font-weight: 900;
 }
-.word-right-liu{
+
+.word-right-liu {
 	float: left;
 	width: 75%;
 	margin: 30px 160px 30px 40px;
@@ -221,6 +234,7 @@ span {
 	color: var(--fColor);
 	font-weight: 900;
 }
+
 .word::after {
 	content: "";
 	display: block;
@@ -228,7 +242,7 @@ span {
 }
 
 /* 个人对话框Message-dialog */
-.container-dialog-liu{
+.container-dialog-liu {
 	border: 0 solid black;
 	position: relative;
 	left: auto;
@@ -236,39 +250,45 @@ span {
 	width: 100%;
 	margin-bottom: 16vw;
 }
-.id_img-liu{
-		width: 100%;
-		fill: currentColor;
-		border-radius: 50%;
-		background-size: contain;
+
+.id_img-liu {
+	width: 100%;
+	fill: currentColor;
+	border-radius: 50%;
+	background-size: contain;
 }
-.bottom-liu{
-	position: sticky;
+
+.bottom-liu {
+	position: fixed;
 	left: 0px;
 	bottom: 0px;
 	width: 100%;
-	height:16vw;
+	height: 26vw;
 	background-color: white;
 	display: flex;
 	justify-content: center;
 	/* filter不规则图形模糊样式 */
 	filter: drop-shadow(0px -1px 11px #33333333);
 }
-.input-liu{
+
+.input-liu {
 	border-radius: 40%;
 	position: absolute;
-    bottom: 0;
-    left: 45%;
-    transform: translate(-50%, -50%);
+	bottom: 0;
+	left: 45%;
+	transform: translate(-50%, -50%);
 	width: 80%;
-	height:8vw;
+	height: 8vw;
 	background-color: white;
 	border: 0 solid black;
 	border-radius: 60px;
 	display: inline-block;
+	margin-top: 100px;
 }
+
 /* 搜索页面 这里是傅文雅的CSS!*/
-ul,li {
+ul,
+li {
 	list-style: none;
 }
 
@@ -283,13 +303,15 @@ a {
 	background-color: #CCCCCC;
 	border: solid 1px #ccc;
 	margin-bottom: 25pxs;
-	position:sticky;
+	position: sticky;
 	top: 0px;
 	z-index: 1000;
 }
-.search{
+
+.search {
 	background-color: white;
 }
+
 /* 搜索框设置 */
 [type="text"] {
 	width: 85%;
@@ -304,12 +326,13 @@ a {
 	border-top-right-radius: 100px;
 	outline: none;
 }
+
 .list-item2 a {
 	padding: 0 20px;
 	color: var(--fColor);
 	font-weight: bold;
 	margin-bottom: 20px;
-	height: 60px; 
+	height: 60px;
 	background: #6D6D6D14;
 	display: inline-block;
 	/*把a变成行级块*/
@@ -318,6 +341,7 @@ a {
 	text-align: center;
 	line-height: 60px;
 }
+
 /* 筛选种类 设置*/
 .sxzl {
 	border: 0px solid #ccc;
@@ -341,14 +365,15 @@ a {
 	/* margin:0px auto; */
 	margin-top: 30px;
 
-	
+
 	text-align: center;
 	line-height: 65px;
 	display: inline-block;
 	border-right: 4px solid #EEEEEE;
 	background: #eeeeee;
-	color:#4C51B1;
+	color: #4C51B1;
 }
+
 .sxzl ul li ul li a {
 	font-size: 35px;
 	margin-top: 0px;
@@ -358,6 +383,7 @@ a {
 	border: 2px solid #4C51B1;
 	position: relative;
 }
+
 /* 引入按钮 设置 */
 .icon .item1 a {
 	padding: 25px 10px 0 10px;
@@ -366,6 +392,7 @@ a {
 	/*把a变成行级块*/
 
 }
+
 .icon .item2 a {
 	padding: 25px 10px 0 10px;
 	height: 100px;
@@ -373,6 +400,7 @@ a {
 	/*把a变成行级块*/
 
 }
+
 /*当鼠标移动会变色：*/
 .list-item2 a:hover {
 	background-color: var(--fColor);
@@ -400,9 +428,9 @@ a {
 }
 
 /* 最高热度搜索 和 历史搜索*/
- .list-item2 {
+.list-item2 {
 	float: left;
-	
+
 	list-style: none;
 	font-size: 20px;
 	/* margin-left: 20%; */
@@ -437,22 +465,16 @@ b {
 	border-style: solid dashed dashed;
 	border-color: #FFFFFF transparent transparent;
 }
-.trf:hover{
+
+.trf:hover {
 	border-color: #4C51B1 transparent transparent;
 	transform: rotate(180deg);
 	transform-origin: 50% 25%;
 	transition: transform .2s ease-in;
-		display: block;
+	display: block;
 }
 
-#sortout:hover{
-	background-color: #4C51B1;
-	color: #FFFFFF;
-	border-right: 4px solid #4C51B1;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
-}
-#lowers:hover{
+#sortout:hover {
 	background-color: #4C51B1;
 	color: #FFFFFF;
 	border-right: 4px solid #4C51B1;
@@ -460,17 +482,28 @@ b {
 	border-top-right-radius: 10px;
 }
 
-#food,#botm {
+#lowers:hover {
+	background-color: #4C51B1;
+	color: #FFFFFF;
+	border-right: 4px solid #4C51B1;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+#food,
+#botm {
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 }
+
 #menu1 ul li a {
 	background: #4C51B1;
-	color:#FFFFFF;
+	color: #FFFFFF;
 	position: relative;
 }
-#menu1 ul li  a:hover{
-	background:#FFFFFF ;
+
+#menu1 ul li a:hover {
+	background: #FFFFFF;
 	color: #4C51B1;
 }
 
@@ -487,7 +520,7 @@ b {
 
 .sxzl ul li:hover ul {
 	display: block;
-	
+
 }
 
 .sxzl ul li ul li:hover ul {
@@ -515,6 +548,7 @@ input[type=range]::-webkit-slider-thumb {
 	/*margin-left: 80px;
 	margin-top: 70px;*/
 }
+
 #menus ul li:hover ul li ul {
 	display: none;
 }
@@ -528,91 +562,99 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 /* 搜索结果为电脑展开前的界面 */
-.centerarea{
-	
+.centerarea {
+
 	border: 1px solid #ccc;
 	/* position: relative; */
 	/* float: left; */
-	margin:100px auto;
+	margin: 100px auto;
 	/* margin-top: 100px; */
 	width: 70%;
 	border-radius: 80px;
-	margin: 5% 5% 5% 5% ;
+	margin: 5% 5% 5% 5%;
 	overflow: hidden;
 }
+
 .leftfu {
 	position: absolute;
-	width:20%;
+	width: 20%;
 	margin-left: 10px;
-	background:#fff;
+	background: #fff;
 	height: 280px;
 	border-radius: 80px;
 	margin-top: 40px;
 }
-.leftfu ul li svg{
-	color:var(--fColor); 
-	float:left;
-	opacity:1; 
-	font-size:50px;
+
+.leftfu ul li svg {
+	color: var(--fColor);
+	float: left;
+	opacity: 1;
+	font-size: 50px;
 	/* margin-top: 20px; */
 }
 
 .middlefu {
 	position: absolute;
 	/* left:500px; */
-	width:40%;
-	margin-left:150px;
+	width: 40%;
+	margin-left: 150px;
 }
-.middlefu img{
-	height:200px ;
+
+.middlefu img {
+	height: 200px;
 	width: 300px;
-	margin-top:90px ;
+	margin-top: 90px;
 }
-.rightfu{
+
+.rightfu {
 	position: absolute;
 	margin-top: 90px;
-	left:920px;
+	left: 920px;
 	height: 200px;
 	width: 40%;
 	/* background:#666; */
-	margin-left:10px;
-	font-size:30px;
+	margin-left: 10px;
+	font-size: 30px;
 }
-.chakanfu{
+
+.chakanfu {
 	font-size: 20px;
-	background:#666;
+	background: #666;
 	border-radius: 80px;
 }
-.centerarea2{
-	
+
+.centerarea2 {
+
 	border: 1px solid #ccc;
 	position: relative;
 	float: left;
-    left: 20%;
-	margin:100px auto;
+	left: 20%;
+	margin: 100px auto;
 	/* margin-top: 100px; */
 	width: 70%;
-	min-height:500px;
+	min-height: 500px;
 	height: 1100px;
 	border-radius: 80px;
 	/* margin: 5% 5% 5% 5% ; */
 	overflow: hidden;
 	/* height:auto; */
 }
+
 .leftfu2 {
 	position: absolute;
-	width:20%;
+	width: 20%;
 	margin-left: 10px;
-	background:#fff;
+	background: #fff;
 	height: 280px;
 	border-radius: 80px;
 	margin-top: 40px;
 }
-.leftfu2 ul li svg{
-	color:var(--fColor); 
-	float:left;
-	opacity:1; 
-	font-size:50px;
+
+.leftfu2 ul li svg {
+	color: var(--fColor);
+	float: left;
+	opacity: 1;
+	font-size: 50px;
 	margin-left: 10px;
 	margin-top: 20px;
 }
@@ -620,22 +662,23 @@ input[type=range]::-webkit-slider-thumb {
 .middlefu2 {
 	position: absolute;
 	/* left:500px; */
-	width:60%;
-	margin-left:150px;
+	width: 60%;
+	margin-left: 150px;
 	margin-top: 90px;
 	font-size: 30px;
-	height:80%;
-	
+	height: 80%;
+
 }
-.middlefu2 img{
-	height:28% ;
+
+.middlefu2 img {
+	height: 28%;
 	width: 90%;
 	/* margin-top:90px ; */
 	margin-bottom: 10px;
-	
-/* }改变多选框大小 */
-input[type=checkbox] {
--webkit-transform: scale(1.5); /* Safari and Chrome */
 
-}
-	
+	/* }改变多选框大小 */
+	input[type=checkbox] {
+		-webkit-transform: scale(1.5);
+		/* Safari and Chrome */
+
+	}
